--- a/PCA.Rmd
+++ b/PCA.Rmd
@@ -123,17 +123,59 @@ get_pca_ind(pca_values1)
 get_pca_var(pca_values1)
 
 #Visualize the results individuals and variables, respectively. Clustering by all possible Qualitative Variables to see if some can be explained well for the PCA's
-for (var1 in colnames(df_MCA)) {
-  plot(fviz_pca_ind(pca_values1, 
-                    label="none", 
-                    habillage=as.factor(df_MCA[,var1]),
-                    addEllipses=TRUE, 
-                    ellipse.level=0.95,
-                    title=var1)
-       )
-}
-  
-fviz_pca_var(pca_values1)
+# for (var1 in colnames(df_MCA)) {
+#   plot(fviz_pca_ind(pca_values1, 
+#                     label="none", 
+#                     habillage=as.factor(df_MCA[,var1]),
+#                     addEllipses=TRUE, 
+#                     ellipse.level=0.95,
+#                     title=var1)
+#        )
+# }
+
+fviz_pca_ind(pca_values1, 
+        label="none",
+        habillage=df_MCA$JobLevel, 
+        addEllipses=TRUE, 
+        ellipse.level=0.95,
+        title=var1)
+
+fviz_pca_ind(pca_values1, 
+        label="none", 
+        habillage=df_MCA$MultivariateOutlier,
+        addEllipses=TRUE, 
+        ellipse.level=0.95,
+        title=var1)
+
+fviz_pca_var(pca_values1,axes=c(1,2), col.var="contrib",
+             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+             repel = TRUE # Avoid text overlapping
+             )
+fviz_pca_var(pca_values1,axes=c(1,3), col.var="contrib",
+             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+             repel = TRUE # Avoid text overlapping
+             )
+fviz_pca_var(pca_values1,axes=c(1,4), col.var="contrib",
+             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+             repel = TRUE # Avoid text overlapping
+             )
+fviz_pca_var(pca_values1,axes=c(2,3), col.var="contrib",
+             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+             repel = TRUE # Avoid text overlapping
+             )
+fviz_pca_var(pca_values1,axes=c(2,4), col.var="contrib",
+             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+             repel = TRUE # Avoid text overlapping
+             )
+fviz_pca_var(pca_values1,axes=c(3,4), col.var="contrib",
+             gradient.cols = c("#00AFBB", "#E7B800", "#FC4E07"),
+             repel = TRUE # Avoid text overlapping
+             )
+
+fviz_contrib(pca_values1, choice = "var", axes = 1, top = 10)
+fviz_contrib(pca_values1, choice = "var", axes = 2, top = 10)
+fviz_contrib(pca_values1, choice = "var", axes = 3, top = 10)
+fviz_contrib(pca_values1, choice = "var", axes = 4, top = 10)
 
 
 #Make a biplot of individuals and variables.
